--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,10 +9,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular-route.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular-route.min.js"></script> -->
+    <script src="js/angular-ui-router.js"></script>
+
+    <script src="angular-ui/dist/ui-bootstrap-0.11.0-SNAPSHOT.js"></script>
+    <script src="angular-ui/dist/ui-bootstrap-tpls-0.11.0-SNAPSHOT.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="sheets/dnd3.5/dnd3.5.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
@@ -37,11 +42,11 @@
       </div>
     </nav>
     <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
+      <div class="col-md-2 sidebar">
         <h2>Revisions</h2>
       </div>
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <div ng-view></div>
+      <div class="col-md-10 col-md-offset-2 main">
+        <div ui-view></div>
       </div>
     </div>
 
