Commit all the other things

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,6 +20,7 @@
     <script src="sheets/dnd3.5/dnd3.5.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="charsheet-icons/style.css" />
   </head>
   <body class="container-fluid">
     <nav role="navigation">
